Sensor, Simulation refactoring

--- a/SmartHome/config/config.json
+++ b/SmartHome/config/config.json
@@ -1,4 +1,21 @@
 {
+  "inhabitants": {
+    "persons": {
+      "children": [{
+
+      }],
+      "adults": [
+        {
+
+        }
+      ]
+    },
+    "pets": [
+      {
+
+      }
+    ]
+  },
   "home": {
     "floors": [
       {
